--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "swiper": "^11.0.7",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
