--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier": "^3.0.3",
     "sass": "^1.77.1",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vite-plugin-pwa": "^0.20.1"
   }
 }
