--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "current-device": "^0.10.2",
     "firebase": "^8.2.7",
     "howler": "^2.2.4",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "swiper": "^11.0.7",
     "vee-validate": "^4.12.6",
@@ -35,6 +36,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.38",
     "prettier": "^3.0.3",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.77.1",
     "tailwindcss": "^3.4.3",
     "vite": "^5.1.6",
